--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   window_manager: ^0.3.8
   cupertino_icons:
+  super_clipboard:
 
 dev_dependencies:
   flutter_test:
