WIP now we have access to clipboard and we write a clipboardItem on the main page every time we have a copy/cut event. missing adding to clipboard through IconButton.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   window_manager: ^0.3.8
   cupertino_icons:
   super_clipboard:
+  clipboard_watcher: ^0.2.0
 
 dev_dependencies:
   flutter_test:
