--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,23 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+    sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-  window_manager: ^0.3.8
-  cupertino_icons:
-  super_clipboard:
-  clipboard_watcher: ^0.2.0
+    flutter:
+        sdk: flutter
+    window_manager: ^0.3.8
+    cupertino_icons:
+    super_clipboard:
+    clipboard_watcher: ^0.2.0
+    link_preview_generator: ^1.2.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
+    flutter_test:
+        sdk: flutter
+    flutter_lints: ^3.0.0
 
 flutter:
-  uses-material-design: true
+    uses-material-design: true
+    assets:
+        - lib/assets/
