--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     super_clipboard:
     clipboard_watcher: ^0.2.0
     link_preview_generator: ^1.2.0
+    hive: ^2.2.3
+    hive_flutter: ^1.1.0
+    hive_generator: ^2.0.1
+    build_runner: ^2.4.9
 
 dev_dependencies:
     flutter_test:
